# midas-gui

./: .bumpversion.cfg  .gitignore  LICENSE  Makefile.dev  Makefile.prod  README.md  install.sh  package.json
.github/workflows/: bump-version.yml
config/: gui-config.toml
scripts/: build.sh  install.sh  test.sh
src/: App.css  App.jsx  main.jsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/icons/old/: icon copy.icns  icon.icns  zicon.icns
src-tauri/icons/oldz/: icon.icns
src-tauri/src/: backtest.rs  context.rs  error.rs  lib.rs  live.rs  main.rs  market.rs  news.rs  window.rs
src/components/Backtest/: Dashboard.css  Dashboard.jsx
src/components/Backtest/Charts/: CandleStickChart.jsx  ChartsCollection.css  ChartsCollection.jsx  LineChart.css  LineChart.jsx  ReturnChart.css  ReturnChart.jsx  SignalChart.css  SignalChart.jsx
src/components/Backtest/FilterBar/: FilterBar.css  FilterBar.jsx  Modal.css  Modal.jsx
src/components/Backtest/Hooks/: useBacktest.js  usePagination.js
src/components/Backtest/Tables/: OverviewTable.css  OverviewTable.jsx  ParametersTable.css  ParametersTable.jsx  SignalsTable.css  SignalsTable.jsx  TablesCollection.css  TablesCollection.jsx  TradeTable.css  TradeTable.jsx
src/components/Live/: Dashboard.css  Dashboard.jsx  TableLayout.css
src/components/Live/Account/: AccountTable.css  AccountTable.jsx
src/components/Live/FilterBar/: FilterBar.css  FilterBar.jsx
src/components/Live/Hooks/: useLive.js
src/components/Live/Orders/: OrdersTable.jsx
src/components/Live/Positions/: PositionsTable.jsx
src/components/Live/Risk/: RiskTable.css  RiskTable.jsx
src/components/Market/: Market.jsx  Markets.css  useMarketDashboard.jsx
src/components/News/: NewsPage.css  NewsPage.jsx  useNews.jsx
src/components/News/Feed/: Feed.css  Feed.jsx
src/components/News/Header/: Header.css  Header.jsx
src/components/News/Headline/: Headline.css  Headline.jsx
src/components/SideBar/: Sidebar.css  Sidebar.jsx
src/components/TradingView/Chart/: TradingView.css  (+1 more)
src/contexts/: BacktestContext.jsx  LiveContext.jsx  MarketContext.jsx  NewsContext.jsx
src/tests/: AuthContext.test.jsx  BacktestContext.test.jsx  LiveContext.test.jsx  NewsContext.test.jsx  useBacktest.test.jsx  useLive.test.jsx  useNews.test.jsx  usePagination.test.jsx
src/tests/mock/: mockData.js  mockStorage.js
src/utils/: logger.js  unix_time.js
(+4 files in other folders)
