[package]
name = "Midas"
version = "0.1.0"
description = "A Tauri App"
authors = ["anthony baxter"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "midas_gui_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0.3", features = [] }

[dependencies]
tauri = { version = "2.1.1", features = [] }
tauri-plugin-shell = "2.0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1.0.86"
thiserror = "1.0.61"
reqwest = { version = "0.11", features = ["json"] }
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1", features = ["full"] }
bigdecimal = { version = "0.3", features = ["serde"] }
toml = "0.8.19"
mbn = { git = "https://github.com/midassystems/mbn.git", branch = "main" }
midas_client = { git="https://github.com/midassystems/midas-rs.git", branch ="main" }
