[package]
name = "Midas"
version = "0.1.2"
description = "A Tauri App"
authors = ["anthony baxter"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "midas_gui_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0.5", features = [] }

[dependencies]
tauri = { version = "2.2.5", features = [] }
tauri-plugin-shell = "2.2.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2.0.11"
reqwest = { version = "0.12.12", features = ["json"] }
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1", features = ["sync", "rt-multi-thread"] }
toml = "0.8.19"
mbinary = {version= "1.0.26"}
midas-client = {version="1.0.20"}

[dev-dependencies]
tokio = { version = "1.0", features = ["macros", "rt-multi-thread", "time"] }

